tests/baselines/reference/returnTypeParameter.errors.txt
tests/cases/compiler/returnTypeParameter.ts(1,22): error TS2847: A function with this return type needs to explicitly return a value.
tests/cases/compiler/returnTypeParameter.ts(2,34): error TS2693: 'T' only refers to a type, but is being used as a value here.


==== tests/cases/compiler/returnTypeParameter.ts (2 errors) ====
    function f<T>(a: T): T { } // error, no return statement
                         ~
!!! error TS2847: A function with this return type needs to explicitly return a value.
    function f2<T>(a: T): T { return T; } // bug was that this satisfied the return statement requirement
                                     ~
!!! error TS2693: 'T' only refers to a type, but is being used as a value here.